# Greeter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/appshell/: CMakeLists.txt  appshell.cpp  appshell.h  appshell.qrc  appshellmodule.cpp  appshellmodule.h  test.cpp
src/appshell/internal/: appshellactionsstore.cpp  appshellactionsstore.h
src/appshell/qml/: AboutDialog.qml  main.qml
src/appshell/qml/Greeter/AppShell/: AboutDialog.qml  GTMenuBar.qml  qmldir
src/framework/: CMakeLists.txt
src/framework/actions/: CMakeLists.txt  actioncontroller.h  actiontypes.h  dispatcher.h  iactionscontroller.h  iactionsdispatcher.h  idispatcher.h  istore.h
src/framework/actions/internal/: actionsdispatcher.cpp  actionsdispatcher.h  dispatcher.cpp  dispatcher.h
src/framework/global/: CMakeLists.txt  README.md  engines.cpp  engines.h  ret.cpp  ret.h
src/framework/global/modularity/: imodulesetup.h
src/framework/interactive/: CMakeLists.txt  iinteractive.h  interactive.h
src/framework/interactive/internal/: interactive.cpp  interactive.h
src/framework/ui/: CMakeLists.txt  uimodule.cpp  uimodule.h  uitheme.cpp  uitheme.h
src/framework/uicomponents/: CMakeLists.txt  uicomponents.qrc  uicomponentsmodule.cpp  uicomponentsmodule.h
src/framework/uicomponents/view/: dialogview.cpp  dialogview.h  popupview.cpp  popupview.h
src/greet/: CMakeLists.txt  greet.qrc  greetmodule.cpp  greetmodule.h
src/greet/internal/: greetingstore.cpp  greetingstore.h
src/greet/qml/Greeter/Greet/: GreetingSettingsDialog.qml  qmldir  (+1 more)
src/main/: CMakeLists.txt  main.cpp
(+5 files in other folders)
